# reforis

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  Dockerfile  Makefile  README.md  pylintrc  pyproject.toml  setup.py
docs/source/: api_blueprint.rst  conf.py  debugging.md  index.rst
js/: .eslintrc.js  .prettierrc  jsconfig.json  package-lock.json  package.json  prettier.config.js  styleguide.config.js  webpack.config.js
js/src/: app.css  app.js  app.scss  fontAwesomeIcons.js
js/src/about/: About.js
js/src/common/: API.js  FactoryResetButton.js  RebootButton.js  ScrollToTopArrow.css  ScrollToTopArrow.js
js/src/connectionTest/: ConnectionTest.js  ConnectionTestButton.js  ConnectionTestResult.js  hooks.js
js/src/context/: customizationContext.js  themeContext.js
js/src/dns/: DNS.js  DNSForm.js  DNSSECDisableModal.js
js/src/guestNetwork/: GuestNetwork.js  GuestNetworkDHCPClientsList.js  GuestNetworkForm.js  GuestNetworkNotification.js
js/src/guide/: Guide.css  Guide.js  GuideHelper.js  GuidePage.js  GuideRouter.js  constants.js  hooks.js  steps.js
js/src/lan/: LAN.js  (+5 more)
reforis/: __init__.py  __main__.py  backend.py  cli.py  guide.py  locale.py  plugins.py  utils.py  views.py
reforis/api/: __init__.py
reforis/config/: dev.py  prod.py  test.py
reforis/foris_controller_api/: __init__.py  utils.py
reforis/sessions/: __init__.py  sessions.py
reforis/templates/: base.html  guide.html  index.html
reforis/test_utils/: __init__.py  fixtures.py  mocked_send.py
reforis/translations/: messages.pot
tests/: test_api.py
tests/foris_controller_api/: test_foris_controller_api.py  test_packages_and_languages.py  test_password.py  test_updates.py
(+272 files in other folders)
